# uv-mcp-multimodal-assistant

./: .gitignore  LICENSE  README.md  chat_ui.py  main.py  pyproject.toml  test_core.py  test_tool_router.py
config/: preferences.json  ui_state.json
core/: conversation_manager.py  intent_cache.py  intent_recognizer.py  llm_interface.py  state_manager.py  tool_router.py
diagrams/: Class.md  Flow.md  Sequence.md  architecture_preview_LR.md  architecture_preview_TD.md
tools/: areaSearchMCP.py  marketMCP.py  weatherMCP.py
